--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -31,3 +31,11 @@
     padding-right: 40px;
     padding-top: 20px;
 }
+
+#landingPageLogo{
+    display: block;
+    margin-left: auto;
+    margin-top: 200px;
+    margin-right: auto;
+    width: 50%;
+}
