--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -11,8 +11,9 @@
 }
 
 #navbar{
+    margin-left: 20px;
+    margin-right: 20px;
     padding-top: 40px;
-    padding-left: 40px;
     width: 170px;
 }
 
