--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -2,27 +2,22 @@
 
 #gameContainer{
     display: grid;
-    grid-template-rows: 50px 50px 50px 50px 50px 50px 50px 50px;
-    grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px;
+    grid-template-rows: repeat(12, 50px);
+    grid-template-columns: repeat(12, 100px);
     color: white;
-    background-color: rgb(69, 201, 245);
 }
 
 #gameImage{
-    width: 250px;
-    height: 350px;
+    width: 330px;
+    height: 450px;
     grid-row: 2 / 8;
     grid-column: 1 / 3;
-    background-color: blue;
 }
 
 #gameTitle{
-    width: 250px;
-    height: 50px;
     grid-row: 2 / 3;
-    grid-column: 4 / 5;
-    background-color: cadetblue;
-    font-size: 40px;
+    grid-column: 5 / 8;
+    font-size: 45px;
     font-weight: bold;
 }
 
@@ -33,26 +28,28 @@
     text-align: center;
     font-family: 'Inter';
     color: white;
-    font-size: 20px;
+    font-size: 24px;
     border-radius: 10px;
     border-style: none;
-    grid-row: 2 / 3;
-    grid-column: 7 / 8;
+    grid-row: 3 / 4;
+    grid-column: 9 / 10;
+    cursor: pointer;
 }
 
 #avgRating{
     width: 500px;
-    height: 60px;
+    height: 10px;
     grid-row: 4 / 5;
-    grid-column: 4 / 5;
-    background-color: rgb(1, 10, 59);
-    font-size: 35px;
+    grid-column: 5 / -1;
+    font-size: 40px;
+    font-weight: bold;
 }
 
 #gameDescription{
-    width: 500px;
+    width: 600px;
     height: 200px;
-    grid-row: 5 / 8;
-    grid-column: 4 / 8;
-    background-color: rgb(27, 25, 105);
-}
+    grid-row: 6 / -1;
+    grid-column: 5 / -1;
+    font-size: 16px;
+    font-weight: bold;
+} 
