--- a/src/components/GameReview.css
+++ b/src/components/GameReview.css
@@ -1,1 +1,60 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
+
+#gamereviewContainer{
+    font-family: 'Inter';
+    color: white;
+    background-color: #404F71;
+    display: grid;
+    grid-template-columns: repeat(10, 100px);
+    grid-template-rows: repeat(3, 50px);
+    width: 1000px;
+    height: 150px;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+}
+
+#reviewerProfilePicture{
+    height: 80px;
+    width: 80px;
+    border-radius: 80px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+#activity{
+    width: 800px;
+    height: 10px;
+    grid-row: 1 / 2;
+    grid-column: 2 / 10;
+}
+
+#reviewDescription{
+    width: 800px;
+    height: 30px;
+    grid-row: 2 / 3;
+    grid-column: 2 / 10;
+}
+
+#likeButton{
+    display: flex;
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+    background-color: #404F71;
+    border-style: none;
+
+}
+
+#heart{
+    align-self: center;
+    width: 25px;
+    height: 25px;
+}
+
+#likes{
+    font-size: 14px;
+    align-self: center;
+    color: white;
+    font-family: 'Inter';
+    margin-left: 8px;
+}
