--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -12,18 +12,78 @@
     grid-column: 1 / 4;
 }
 
-#search{
-
-}
-
 #searchBar{
-
+    width: 1000px;
+    height: 50px;
+    grid-row: 3 / 4;
+    grid-column: 5 / 15;
+    display: grid;
+    grid-template-columns: repeat(10, 100px);
+    grid-template-rows: 50px;
+    
 }
 
 #searchButton{
-
+    height: 50px;
+    width: 50px;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    background: transparent;
+    border-style: none;
+    cursor: pointer;
 }
 
 #searchIcon{
+    height: 50px;
+    width: 50px;
+}
 
+#searchInput{
+    background-color: #d9d9d9;
+    height: 50px;
+    width: 900px;
+    grid-column: 2 / 10;
+    grid-row: 1 / 2;
+    border-style: none;
+    border-radius: 20px;
+}
+
+#users{
+    height: 50px;
+    width: 100px;
+    background: transparent;
+    color: #d9d9d9;
+    border-style: none;
+    font-size: 30px;
+    font-weight: bold;
+    grid-row: 5 / 6;
+    grid-column: 7 / 9;
+    cursor: pointer;
+}
+
+#games{
+    height: 50px;
+    width: 100px;
+    background: transparent;
+    color: #d9d9d9;
+    border-style: none;
+    font-size: 30px;
+    font-weight: bold;
+    grid-row: 5 / 6;
+    grid-column: 12 / 14;
+    cursor: pointer;
+}
+
+#gameTab{
+    grid-column: 5 / 15;
+    grid-row: 11 / 22;
+    height: 85vh;
+    background-color: aqua;
+}
+
+#userTab{
+    grid-column: 5 / 15;
+    grid-row: 11 / 22;
+    height: 85vh;
+    background-color: red;
 }
