--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -76,14 +76,14 @@
 
 #gameTab{
     grid-column: 5 / 15;
-    grid-row: 11 / 22;
-    height: 85vh;
+    grid-row: 7 / 28;
+    height: 100%;
     background-color: aqua;
 }
 
 #userTab{
     grid-column: 5 / 15;
-    grid-row: 11 / 22;
-    height: 85vh;
+    grid-row: 7 / 28;
+    height: 100%;
     background-color: red;
 }
