--- a/src/components/GameCard.css
+++ b/src/components/GameCard.css
@@ -1,1 +1,27 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
+
+.card{
+    flex: 0 0 calc(33.33% - 20px);
+    max-width: calc(33.33% - 20px);
+    width: 100%;
+    margin-bottom: 20px;
+    transition: all .2s ease-in-out; 
+    border: 2px solid transparent;
+}
+  
+.card:hover{
+    transform: scale(1.1); 
+    cursor: pointer;
+}
+
+#cardImage{
+    width: 100%;
+    height: 400px;
+}
+
+#cardGameTitle{
+    font-family: 'Inter';
+    font-size: 30px;
+    color: white;
+    text-align: center;
+}
