--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -77,13 +77,18 @@
 #gameTab{
     grid-column: 5 / 15;
     grid-row: 7 / 28;
-    height: 100%;
-    background-color: aqua;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #userTab{
     grid-column: 5 / 15;
     grid-row: 7 / 28;
-    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: red;
 }
