--- a/src/components/GameReview.css
+++ b/src/components/GameReview.css
@@ -40,7 +40,7 @@
     display: flex;
     grid-row: 3 / 4;
     grid-column: 2 / 3;
-    background-color: #404F71;
+    background: transparent;
     border-style: none;
 
 }
