--- a/src/components/GamesGrid.css
+++ b/src/components/GamesGrid.css
@@ -5,6 +5,9 @@
     width: 100%;
     margin: auto;
     height: 100%;
+    padding: 25px;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 #cards{
