-Added scrollbar css; applies to all scrollbars -Feel free to change the look of it!

--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -46,6 +46,8 @@
     grid-row: 1 / 2;
     border-style: none;
     border-radius: 20px;
+    font-family: 'Inter';
+    font-size: 35px;
 }
 
 #usersButton{
