--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 body{
   background-color: #20283A;
 }
+
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: #404F71;
+}
+ 
+::-webkit-scrollbar-thumb{
+  background: white;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background:  #6e6e6e;
+}
