-added comments to all files I worked on -Changed behavior of scrollbar to disappear when not needed -added a list of users to the users list -need to work on stars

--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
 
+/* the box that holds the game's info */
 #gameContainer{
     display: grid;
     grid-template-rows: repeat(8, 50px);
