--- a/src/pages/GamePage.css
+++ b/src/pages/GamePage.css
@@ -1,15 +1,18 @@
+/* this is the entire page */
 #gamePage{
     display: grid;
     grid-template-columns: repeat(20, 100px);
     grid-template-rows: repeat(28, 50px);
 }
 
+/* section that contains the nav bar*/
 #navigation{
     height: 100vh;
     grid-row: 2 / 22;
     grid-column: 1 / 4;
 }
 
+/* section that contains info about a certain game */
 #game{
     width: 1000px;
     height: 400px;
@@ -17,6 +20,7 @@
     grid-row: 2 / 9;
 }
 
+/* section that contains user reviews */
 #review{
     grid-column: 5 / 15;
     grid-row: 11 / 22;
