--- a/src/components/User.css
+++ b/src/components/User.css
@@ -1,1 +1,43 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
+
+/* holds the profile pic, name, email, stars */
+#userContainer{
+    font-family: 'Inter';
+    color: white;
+    background-color: #404F71;
+    display: grid;
+    grid-template-columns: repeat(10, 100px);
+    grid-template-rows: repeat(3, 50px);
+    width: 1000px;
+    height: 150px;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
+}
+
+#userProfilePicture{
+    height: 80px;
+    width: 80px;
+    border-radius: 80px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+#userName{
+    width: 500px;
+    grid-column: 2 / 7;
+    grid-row: 1 / 2;
+    font-size: 40px;
+    height: 50px;
+    margin: 20px 0px 0px 10px;
+    font-weight: bold;
+}
+
+#userEmail{
+    width: 200px;
+    height: 50px;
+    margin: 30px 0px 0px 10px;
+    grid-column: 2 / 4;
+    grid-row: 2 / 3;
+    font-size: 25px;
+}
