--- a/src/pages/Search.css
+++ b/src/pages/Search.css
@@ -1,17 +1,20 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
 
+/* the overall layout of the page */
 #searchPage{
     display: grid;
     grid-template-columns: repeat(20, 100px);
     grid-template-rows: repeat(28, 50px);
 }
 
+/* for the nav bar */
 #navigation{
     height: 100vh;
     grid-row: 2 / 22;
     grid-column: 1 / 4;
 }
 
+/* a section for the search form */
 #searchBar{
     width: 1000px;
     height: 50px;
@@ -38,6 +41,7 @@
     width: 50px;
 }
 
+/* form input */
 #searchInput{
     background-color: #d9d9d9;
     height: 50px;
@@ -50,6 +54,7 @@
     font-size: 35px;
 }
 
+/* show users tab */
 #usersButton{
     height: 50px;
     width: 100px;
@@ -63,6 +68,7 @@
     cursor: pointer;
 }
 
+/* show games tab */
 #gamesButton{
     height: 50px;
     width: 100px;
@@ -92,5 +98,4 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: red;
 }
