--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
+@import url(https://fonts.googleapis.com/css?family=Kalam);
 
 /* the box that holds the game's info */
 #gameContainer{
@@ -60,21 +61,79 @@
 /* the game component so having the form here would maintain that consistency */
 
 #reviewPopup{
-    
+    width: 800px;
+    height: 500px;
+    background-color: #404F71;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    display: grid;
+    grid-template-columns: repeat(10, 80px);
+    grid-template-rows: repeat(25, 20px);
+    position: inherit;
+    grid-column: 2 / 10;
+    grid-row: 5 / 10;
 }
 
 #reviewPopupCloseButton{
-
+    background: transparent;
+    width: 80px;
+    height: 60px;
+    border-style: none;
+    color: #D9D9D9;
+    font-family: 'Kalam';
+    font-size: 50px;
+    font-weight: bold;
+    grid-row: 1 / 4;
+    grid-column: 10 / 11;
+    padding-right: 10px;
+    padding-top: 10px;
+    cursor: pointer;
 }
 
+#reviewPopupRateText{
+    color: #D9D9D9;
+    font-family: 'Inter';
+    font-size: 50px;
+    font-weight: bold;
+    width: 320px;
+    height: 60px;
+    margin-top: 0;
+    margin-bottom: 0;
+    grid-row: 4 / 5;
+    grid-column: 2 / 6;
+}
+
+/* acts as a div */
 #reviewPopupForm{
-    
+    width: 640px;
+    height: 260px;
+    grid-row: 8 / 22;
+    grid-column: 2 / 9;
 }
 
 #reviewPopupInput{
-
+    width: 632px;
+    height: 254px;
+    background-color: #D9D9D9;
+    border-style: none;
+    border-radius: 10px;
+    font-size: 20px;
+    padding: 5px;
+    resize: none;
 }
 
 #reviewPopupPostButton{
-    
+    width: 160px;
+    height: 40px;
+    background-color: #0078E8;
+    text-align: center;
+    font-family: 'Inter';
+    color: white;
+    font-size: 24px;
+    border-radius: 10px;
+    border-style: none;
+    cursor: pointer;
+    grid-row: 22 / 23;
+    grid-column: 8 / 10;
 }
