--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -17,9 +17,10 @@
     margin-right: 40px;
     padding-top: 40px;
     /*padding-left: 40px;*/
-    width: 170px;
+    width: 100%;
 }
 
 #icon-navbar{
-    height:100px;
+    height: 100px;
+    margin-bottom: 40px;
 }
