--- a/src/pages/LandingPage.css
+++ b/src/pages/LandingPage.css
@@ -1,22 +1,41 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
 
+#landingPageHeader{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 70px;
+}
+
 #title{
     color:white;
     text-align: center;
+    margin-left: 20px;
+}
+
+#link{
+    color: white;
+    text-decoration: none;
+
+    margin-left: auto;
+    padding-right: 40px;
+    padding-top: 20px;
 }
 
 #linkButton{
     background-color: #0078E8;
-    border:none;
+    border: none;
     border-radius: 10px;
     font-size: 24px;
     font-family:'Inter';
-    width: 200px;
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-weight: 500;
+
     text-align: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    color:white;
-    font-weight:500;
+    padding: 10px 15px 10px 15px;
 }
 
 #linkButton:hover{
@@ -24,18 +43,98 @@
     cursor: pointer;
 }
 
-#link{
-    color: white;
-    text-decoration: none;
-    float:right;
-    padding-right: 40px;
-    padding-top: 20px;
-}
-
 #landingPageLogo{
-    display: block;
+    height: 400px;
+    width: 400px;
+    
+    display: flex;
     margin-left: auto;
     margin-top: 200px;
     margin-right: auto;
-    width: 50%;
+}
+
+/* If you need to change anything, add css in these media queries */
+@media(min-width: 1281px) {
+
+}
+
+@media(min-width: 1025px) and (max-width: 1280px) {
+
+}
+
+@media(min-width: 961px) and (max-width: 1024px) {
+
+}
+
+@media(min-width: 641px) and (max-width: 960px) {
+
+}
+
+@media(min-width: 481px) and (max-width: 640px) {
+    #landingPageHeader{
+        padding-top: 20px;
+    }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+    #landingPageHeader{
+        padding-top: 20px;
+        display: block;
+    }
+
+    #landingPageLogo{
+        height: 50%;
+        width: 50%;
+    }
+
+    #title{
+        color: white;
+        font-size: 30px;
+
+        text-align: left;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    #link{
+        margin-left: 20%;
+    }
+
+    #linkButton{
+        width: 200px;
+        height: 50px;
+        margin: auto;
+    }
+}
+
+@media (max-width: 319px) {
+    #landingPageHeader{
+        padding-top: 20px;
+        display: block;
+    }
+
+    #landingPageLogo{
+        height: 200px;
+        width: 200px;
+        margin: 200px auto auto auto;
+    }
+
+    #title{
+        color: white;
+        font-size: 30px;
+
+        text-align: left;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    #link{
+        margin-left: 60px;
+    }
+
+    #linkButton{
+        width: 200px;
+        height: 50px;
+        margin: auto;
+    }
 }
