--- a/src/components/GameReview.css
+++ b/src/components/GameReview.css
@@ -6,10 +6,9 @@
     color: white;
     background-color: #404F71;
     display: grid;
-    grid-template-columns: repeat(10, 100px);
-    grid-template-rows: repeat(3, 50px);
-    width: 1000px;
-    height: 150px;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(3, 60px);
+    height: 180px;
     border-color: black;
     border-style: solid;
     border-width: 1px;
@@ -21,30 +20,32 @@
     border-radius: 80px;
     margin-top: 10px;
     margin-left: 10px;
+    grid-row: 1 / 2;
+    grid-column: 1;
 }
 
 /* example: ryan kolano reviewed x game */
 #activity{
-    width: 800px;
-    height: 10px;
+    margin-left: 10px;
     grid-row: 1 / 2;
-    grid-column: 2 / 10;
+    grid-column: 2 / 8;
+    font-size: clamp(0.8rem, 1.5vw, 1.2rem); 
 }
 
 #reviewDescription{
-    width: 800px;
-    height: 30px;
+    margin-left: 10px;
     grid-row: 2 / 3;
-    grid-column: 2 / 10;
+    grid-column: 2 / 8;
+    font-size: clamp(0.8rem, 1.5vw, 1.2rem);
 }
 
 #likeButton{
     display: flex;
     grid-row: 3 / 4;
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
     background: transparent;
     border-style: none;
-
+    margin-left: 3px;
 }
 
 #heart{
@@ -55,7 +56,7 @@
 
 /* text associated with how many likes */
 #likes{
-    font-size: 14px;
+    font-size: 13px;
     align-self: center;
     color: white;
     font-family: 'Inter';
