--- a/src/components/ReviewList.css
+++ b/src/components/ReviewList.css
@@ -3,8 +3,10 @@
 /* this "box" holds all the review components */
 /* the review components are all those light blue rectangles */
 #reviewContainer{
-    width: 1000px;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 750px;
+    /* background-color: blue; */
     overflow: hidden;
     overflow-y: scroll;
 }
