--- a/src/components/UsersList.css
+++ b/src/components/UsersList.css
@@ -1,9 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
 
 #list{
-    max-width: 1000px;
-    width: 100%;
-    margin: auto;
+    display: flex;
+    flex-direction: column;
     height: 100%;
     overflow: hidden;
     overflow-y: auto;
