--- a/src/components/GamesGrid.css
+++ b/src/components/GamesGrid.css
@@ -2,18 +2,23 @@
 
 /* the overall box that houses the game cards */
 #grid{
-    max-width: 1000px;
-    width: 100%;
-    margin: auto;
     height: 100%;
-    padding: 25px;
+    padding: 20px;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     overflow: hidden;
     overflow-y: auto;
 }
 
-/* how each game card should behave in response to viewport changes */
-#cards{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+@media(max-width: 859px) and (min-width: 576px){
+    #grid{
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
+}
+
+@media(max-width: 575px){
+    #grid{
+        height: 95%;
+    }
 }
