--- a/src/components/User.css
+++ b/src/components/User.css
@@ -6,10 +6,8 @@
     color: white;
     background-color: #404F71;
     display: grid;
-    grid-template-columns: repeat(10, 100px);
+    grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(3, 50px);
-    width: 1000px;
-    height: 150px;
     border-color: black;
     border-style: solid;
     border-width: 1px;
@@ -24,20 +22,34 @@
 }
 
 #userName{
-    width: 500px;
-    grid-column: 2 / 7;
+    grid-column: 2 / -1;
     grid-row: 1 / 2;
-    font-size: 40px;
-    height: 50px;
-    margin: 20px 0px 0px 10px;
+    font-size: clamp(20px, 3vw, 40px);
+    margin: 0;
     font-weight: bold;
+    margin-left: 20px;
 }
 
 #userEmail{
-    width: 200px;
-    height: 50px;
-    margin: 30px 0px 0px 10px;
-    grid-column: 2 / 4;
+    margin: 0;
+    grid-column: 2 / -1;
     grid-row: 2 / 3;
-    font-size: 25px;
+    font-size: clamp(16px, 3vw, 25px);
+    margin-left: 20px;
+}
+
+@media (max-width: 439px){
+    #userContainer{
+        grid-template-rows: repeat(4, 50px);
+    }
+
+    #userName{
+        grid-column: 1 / -1;
+        grid-row: 3 / 4;
+    }
+
+    #userEmail{
+        grid-column: 1 / -1;
+        grid-row: 4 / 5;
+    }
 }
