-Began working on Login Page functionality     -added form checks for signing up -renamed, moved around login page and its components     -login is now renamed to login page         -renamed is also reflected in app.js     -removed card app example from MERN A video -Minor tweaks to html/css in searchBar, User, Search

--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -100,3 +100,14 @@
     font-size: 14px;
     font-weight: 500;
 }
+
+/*signup error messages*/
+#signup-errors{
+    background-color: #404F71;
+    border-radius: 5px;
+}
+
+.error-text{
+    color: white;
+    font:"Inter";
+}
