--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -14,7 +14,7 @@
 }
 
 #login-title{
-    font: 'Inter';
+    font-family: 'Inter';
     font-size: 36px;
     color: white;
     padding-top: 20px;
@@ -28,7 +28,7 @@
     width: 300px;
     height: 30px;
     padding-left: 10px;
-    font:"Inter";
+    font-family: "Inter";
     font-size: 14px;
     font-weight: 500;
 }
@@ -42,7 +42,7 @@
 }
 
 .form-text{
-    font: 'Inter';
+    font-family: 'Inter';
     color: white;
     font-size: 16px;
     padding-left: 5px;
@@ -56,7 +56,7 @@
     background-color: #0078E8;
     color: white;
     border: none;
-    font: 'Inter';
+    font-family: 'Inter';
     width: 190px;
     height: 40px;
     font-size: 24px;
