--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -6,13 +6,13 @@
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(8, 50px);
-
     color: white;
     /* background-color: red; */
 }
 
 #imageContainer{
     /* background-color: black; */
+
     grid-row: 2 / 9;
     grid-column: 1 / 3;
 }
@@ -23,26 +23,29 @@
 }
 
 #gameTitle{
+    font-weight: bold;
+
     margin: 0 0 0 10px;
     grid-row: 2 / 3;
     grid-column: 3 / 7;
     font-size: clamp(26px, 2vw, 40px);
-    font-weight: bold;
 }
 
 #reviewButton{
     width: 190px;
     height: 40px;
     background-color: #0078E8;
-    text-align: center;
     font-family: 'Inter';
     color: white;
-    font-size: clamp(16px, 2vw, 24px);
     border-radius: 10px;
     border-style: none;
+    cursor: pointer;
+
+    text-align: center;
+    font-size: clamp(16px, 2vw, 24px);
+
     grid-row: 2 / 3;
     grid-column: 9 / 10;
-    cursor: pointer;
 }
 
 #reviewButton:hover{
@@ -50,19 +53,21 @@
 }
 
 #avgRating{
+    font-weight: bold;
+
     margin: 0 0 0 10px;
     grid-row: 4 / 5;
     grid-column: 3 / 10;
     font-size: clamp(21px, 1.5vw, 35px);
-    font-weight: bold;
 }
 
 #gameDescription{
+    font-weight: bold;
+
     margin-left: 15px;
     grid-row: 5 / -1;
     grid-column: 3 / 10;
     font-size: clamp(12px, 2vw, 16px);
-    font-weight: bold;
 } 
 
 /* below contains the css for the review popup for when the review button is clicked */
@@ -75,15 +80,16 @@
     border-width: 1px;
     border-color: black;
     border-radius: 15px;
-    z-index: 9999;
+    width: 40%;
+    height: 420px;
+
+    z-index: 9999; /* bring to front */
     position: absolute;
     top:0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
-    width: 40%;
-    height: 420px;
 }
 
 #reviewPopupCloseButton{
@@ -93,18 +99,20 @@
     font-family: 'Kalam';
     font-size: 50px;
     font-weight: bold;
-    margin: 5px;
     cursor: pointer;
+
+    margin: 5px;
     float: right;
 }
 
 #reviewPopupRateText{
     color: #D9D9D9;
     font-family: 'Inter';
-    font-size: clamp(32px, 4vw, 50px);
     font-weight: bold;
     width: 320px;
     height: 60px;
+
+    font-size: clamp(32px, 4vw, 50px);
     margin-top: 60px;
     margin-bottom: 0;
     margin-left: 20px;
@@ -114,6 +122,7 @@
 #reviewPopupForm{
     width: 80%;
     height: 50%;
+
     margin-left: 20px;
 }
 
@@ -123,22 +132,24 @@
     background-color: #D9D9D9;
     border-style: none;
     border-radius: 10px;
+    resize: none;
+
     font-size: clamp(12px 3vw 20px);
     padding: 5px;
-    resize: none;
 }
 
 #reviewPopupPostButton{
     width: 160px;
     height: 40px;
     background-color: #0078E8;
-    text-align: center;
     font-family: 'Inter';
     color: white;
-    font-size: clamp(16px, 2vw, 24px);
     border-radius: 10px;
     border-style: none;
     cursor: pointer;
+
+    text-align: center;
+    font-size: clamp(16px, 2vw, 24px);
     margin-left: 20px;
     margin-top: 20px;
 }
@@ -151,13 +162,13 @@
 @media (max-width: 1400px) and (min-width: 1150px){
 
     #imageContainer{
-        grid-row: 2 / 7;
         grid-column: 1 / 3;
+        grid-row: 2 / 7;
     }
 
     #avgRating{
-        grid-row: 3 / 4;
         grid-column: 3 / 10;
+        grid-row: 3 / 4;
     }
 
     #gameDescription{
@@ -171,29 +182,29 @@
     }
 
     #imageContainer{
-        grid-row: 2 / 7;
         grid-column: 1 / 4;
+        grid-row: 2 / 7;
     }
 
     #gameTitle{
-        grid-row: 3 / 4;
         grid-column: 4 / 8;
+        grid-row: 3 / 4;
     }
     
     #reviewButton{
         margin-left: 10px;
-        grid-row: 2 / 3;
         grid-column: 4 / 5;
+        grid-row: 2 / 3;
     }
     
     #avgRating{
-        grid-row: 4 / 5;
         grid-column: 4 / 10;
+        grid-row: 4 / 5; 
     }
     
     #gameDescription{
-        grid-row: 7 / -1;
         grid-column: 1 / 10;
+        grid-row: 7 / -1;    
         margin-left: 0;
     } 
 }
@@ -204,29 +215,29 @@
     }
 
     #imageContainer{
-        grid-row: 2 / 7;
         grid-column: 1 / 4;
+        grid-row: 2 / 7;
     }
 
     #gameTitle{
-        grid-row: 3 / 4;
         grid-column: 4 / 7;
+        grid-row: 3 / 4;  
     }
     
     #reviewButton{
         margin-left: 10px;
-        grid-row: 2 / 3;
         grid-column: 4 / 4;
+        grid-row: 2 / 3;
     }
     
     #avgRating{
-        grid-row: 4 / 5;
         grid-column: 4 / 10;
+        grid-row: 4 / 5;     
     }
     
     #gameDescription{
-        grid-row: 7 / -1;
         grid-column: 1 / 10;
+        grid-row: 7 / -1;     
     } 
 }
 
@@ -236,31 +247,32 @@
     }
 
     #imageContainer{
-        grid-row: 2 / 7;
         grid-column: 3 / 6;
+        grid-row: 2 / 7;      
     }
 
     #gameTitle{
-        grid-row: 8 / 9;
         grid-column: 1 / 10;
+        grid-row: 8 / 9;
     }
     
     #reviewButton{
-        margin-top: 10px;
         width: 100px;
         height: 30px;
-        grid-row: 7 / 7;
+
+        margin-top: 10px;
         grid-column: 4 / 4;
+        grid-row: 7 / 7;
     }
     
     #avgRating{
-        grid-row: 9 / 10;
         grid-column: 1 / 10;
+        grid-row: 9 / 10;  
     }
     
     #gameDescription{
-        grid-row: 11 / -1;
         grid-column: 1 / 10;
+        grid-row: 11 / -1;
         overflow: hidden;
         overflow-y: auto;
     } 
