-merged search bar component into search -added forgot password form -removed placeholders for games grid -added incorrect info text to login -attempted to work on login -added otp for password reset -added recovered password display (may remove) -added reset password -removed placeholders for review list -deleted searchBar.js/css -removed placeholders for user list -deleted login.js in pages directory -loginPage.js is formatted differently to render -added verify form to signup -began looking into unit testing

--- a/src/components/ForgotPassword.css
+++ b/src/components/ForgotPassword.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
 
-#login{
+#forgot{
     position: absolute;
     top:0;
     bottom: 0;
@@ -13,7 +13,7 @@
     border-radius: 5px;
 }
 
-#login-title{
+#forgot-title{
     font-family: 'Inter';
     font-size: 36px;
     color: white;
@@ -33,12 +33,20 @@
     font-weight: 500;
 }
 
-#login-inside{
+#forgot-inside{
     padding-left: 65px;
 }
 
-#form-login{
+#form-forgot{
     line-height: 10px;
+    margin-top: 40px;
+}
+
+#forgot-description{
+    color: white;
+    font-family: 'Inter';
+    padding-right: 40px;
+    font-size: 20px;
 }
 
 .form-text{
@@ -49,7 +57,7 @@
     font-weight: bold;
 }
 
-#login-button{
+#forgot-button{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,8 +65,8 @@
     color: white;
     border: none;
     font-family: 'Inter';
-    width: 190px;
-    height: 40px;
+    width: 300px;
+    height: 60px;
     font-size: 24px;
     border-radius: 10px;
     font-weight: 500;
@@ -71,7 +79,7 @@
 }
 
 #button-position{
-    padding-top: 80px;
+    padding-top: 100px;
 }
 
 #signup-prompt{
@@ -84,18 +92,6 @@
 }
 
 #incorrect-info-text{
-    font-family: 'Inter';
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    margin-left: 65px;
-}
-
-#forgot-password{
-    margin-top: 20px;
-}
-
-#forgot-password-text{
     font-family: 'Inter';
     color: white;
     font-size: 16px;
