--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -8,7 +8,7 @@
     right: 0;
     margin: auto;
     width: 450px;
-    height: 540px;
+    height: 560px;
     background-color: #404F71;
     border-radius: 5px;
 }
@@ -49,7 +49,7 @@
     font-weight: bold;
 }
 
-#signup-button{
+.formButton{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,7 +65,7 @@
     margin: auto;
 }
 
-#signup-button:hover{
+.formButton:hover{
     cursor: pointer;
     background-color: #3d92e2;
 }
@@ -111,4 +111,34 @@
     color: white;
     font:"Inter";
     font-weight: bold;
+}
+
+/* email verification */
+#verify{
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 450px;
+    height: 510px;
+    background-color: #404F71;
+    border-radius: 5px;
+}
+
+#verify-inside{
+    padding-left: 65px;
+}
+
+#verify-title{
+    font: 'Inter';
+    font-size: 36px;
+    color: white;
+    padding-top: 20px;
+}
+
+#verify-description{
+    padding-right: 40px;
+    color: white;
 }
