--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -1,14 +1,133 @@
 @import url(https://fonts.googleapis.com/css?family=Inter);
-.post-text{
-    color:white;
-    font-family: 'Inter';
-    padding-left: 20px;
-    padding-top: 10px;
-    font-weight: 600;
+
+#post-text{
+    margin-left: 10px;
+    grid-row: 1 / 2;
+    grid-column: 2 / 6;
+    font-size: clamp(0.8rem, 1.5vw, 1.2rem);
+    padding-left: 5%;
+    padding-bottom: 5%;
+}
+
+#post-text-review{
+    margin-left: 10px;
+    grid-row: 2 / 3;
+    grid-column: 2 / 5;
+    font-size: clamp(0.8rem, 1.5vw, 1.2rem);
 }
 
 #post{
+    font-family: 'Inter';
+    color: white;
     background-color: #404F71;
-    height: 140px;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(3, 60px);
+    height: 180px;
+    border-color: black;
+    border-style: solid;
+    border-width: 1px;
     width: 760px;
+}
+
+#stars{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 7 / 9;
+}
+
+#yourratings{
+    position: fixed;
+    color: white;
+    font-family: 'Inter';
+    left: 28%;
+    top: 12%;
+    font-size: clamp(0.983rem, -0.179rem + 2.976vw, 2.5rem);
+
+}
+
+@media (max-width: 1045px) and (min-width: 870px){
+    #post{
+        grid-template-rows: repeat(4, 60px);
+        width: 600px;
+        height: 250px;
+    }
+    
+    #post-text{
+        grid-column: 2 / 5;
+    }
+
+    #stars{
+        grid-column: 6 / 9;
+    }
+
+    #post-text-review{
+        grid-row: 2 / 4;
+    }
+}
+
+@media (max-width: 869px) and (min-width: 701px){
+    #post{
+        grid-template-rows: repeat(5, 60px);
+        width: 450px;
+        height: 300px;
+    }
+
+    #post-text{
+        grid-column: 2 / 8;
+        grid-row: 1;
+    }
+
+    #stars{
+        grid-row: 2;
+        grid-column: 2 / 8;
+        justify-content: left;
+        padding-left: 5%;
+        padding-bottom: 10%;
+    }
+
+    #post-text-review{
+        grid-row: 3 / 5;
+        grid-column: 1 / 8;
+    }
+
+    #yourratings{
+        top: 14%;
+        left: 35%;
+    }
+}
+
+@media (max-width: 700px) {
+    #post{
+        position: relative;
+        top: 350px;
+        right: 250px;
+        width: 600px;
+        height: 300px;
+    }
+
+    #yourratings{
+        font-size: 30px;
+        top: 470px;
+        left: 35%;
+    }
+
+    #post-text{
+        grid-column: 2 / 8;
+        grid-row: 1;
+    }
+
+    #stars{
+        grid-row: 2;
+        grid-column: 2 / 8;
+        justify-content: left;
+        padding-left: 5%;
+        padding-bottom: 10%;
+    }
+
+    #post-text-review{
+        grid-row: 3 / 5;
+        grid-column: 1 / 8;
+    }
 }
