-added multiple APIs for login -login should now work -forgot password should now work -password reset should now work

--- a/frontend/src/components/ForgotPassword.css
+++ b/frontend/src/components/ForgotPassword.css
@@ -73,6 +73,11 @@
     margin: auto;
 }
 
+#forgot-button:hover{
+    cursor: pointer;
+    background-color: #3d92e2;
+}
+
 #button-position{
     padding-top: 100px;
 }
