--- a/frontend/src/components/Game.css
+++ b/frontend/src/components/Game.css
@@ -182,20 +182,25 @@
 
     #imageContainer{
         grid-column: 1 / 3;
-        grid-row: 2 / 7;
+        grid-row: 2 / 8;
+    }
+
+    #gameTitle{
+        grid-row: 2 / 3;
+        grid-column: 3 / 8;
     }
 
     #avgRating{
         grid-column: 3 / 10;
-        grid-row: 3 / 4;
-    }
-
-    #gameDescription{
         grid-row: 4 / 5;
     }
 
+    #gameDescription{
+        grid-row: 5 / 8;
+    }
+
     #gameStars{
-        grid-row: 3 / 4;
+        grid-row: 4 / 5;
         grid-column: 5 / 10;
     }
     
@@ -226,6 +231,8 @@
     }
     
     #reviewButton{
+        width: 120px;
+        height: 40px;
         margin-left: 10px;
         grid-column: 4 / 5;
         grid-row: 2 / 3;
@@ -233,7 +240,7 @@
     
     #avgRating{
         grid-column: 4 / 10;
-        grid-row: 4 / 5; 
+        grid-row: 5 / 6; 
     }
     
     #gameDescription{
@@ -244,7 +251,7 @@
 
     
     #gameStars{
-        grid-row: 5 / 6;
+        grid-row: 6 / 7;
         grid-column: 4 / 10;
         margin-left: 10px;
     }
@@ -271,11 +278,13 @@
     }
 
     #gameTitle{
-        grid-column: 4 / 7;
+        grid-column: 4 / -1;
         grid-row: 3 / 4;  
     }
     
     #reviewButton{
+        width: 120px;
+        height: 40px;
         margin-left: 10px;
         grid-column: 4 / 4;
         grid-row: 2 / 3;
@@ -283,7 +292,7 @@
     
     #avgRating{
         grid-column: 4 / 10;
-        grid-row: 4 / 5;     
+        grid-row: 5 / 6;     
     }
     
     #gameDescription{
@@ -292,7 +301,7 @@
     } 
 
     #gameStars{
-        grid-row: 5 / 6;
+        grid-row: 6 / 7;
         grid-column: 4 / 10;
         margin-left: 10px;
     }
