--- a/frontend/src/components/Game.css
+++ b/frontend/src/components/Game.css
@@ -101,6 +101,9 @@
     border-radius: 15px;
     width: 40%;
     height: 420px;
+    display: grid;
+    grid-template-columns: (10, 1fr);
+    grid-template-rows: (7, 60px);
 
     z-index: 9999; /* bring to front */
     position: absolute;
@@ -121,26 +124,34 @@
     cursor: pointer;
 
     margin: 5px;
-    float: right;
+    grid-row: 1 / 2;
+    grid-column: 9 / 10;
 }
 
 #reviewPopupRateText{
     color: #D9D9D9;
     font-family: 'Inter';
     font-weight: bold;
-    width: 320px;
-    height: 60px;
 
     font-size: clamp(32px, 4vw, 50px);
-    margin-top: 60px;
-    margin-bottom: 0;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    margin-bottom: 5px;
+    margin-top: auto;
     margin-left: 20px;
+}
+
+#reviewPopupStars{
+    grid-row: 1 / 2;
+    grid-column: 8 / 9;
+    margin-top: auto;
+    margin-bottom: 5px;
 }
 
 /* acts as a div */
 #reviewPopupForm{
-    width: 80%;
-    height: 50%;
+    grid-row: 2 / 6;
+    grid-column: 1 / 9;
 
     margin-left: 20px;
 }
@@ -167,6 +178,8 @@
     border-style: none;
     cursor: pointer;
 
+    grid-row: 6 / 7;
+    grid-column:  8 / 9;
     text-align: center;
     font-size: clamp(16px, 2vw, 24px);
     margin-left: 20px;
@@ -193,6 +206,10 @@
     #avgRating{
         grid-column: 3 / 10;
         grid-row: 4 / 5;
+    }
+    
+    #reviewPopup{
+        width: 50%;
     }
 
     #gameDescription{
@@ -249,6 +266,10 @@
         margin-left: 0;
     } 
 
+    #reviewPopup{
+        width: 50%;
+    }
+
     
     #gameStars{
         grid-row: 6 / 7;
@@ -280,6 +301,10 @@
     #gameTitle{
         grid-column: 4 / -1;
         grid-row: 3 / 4;  
+    }
+
+    #reviewPopup{
+        width: 60%;
     }
     
     #reviewButton{
@@ -330,6 +355,10 @@
     #gameTitle{
         grid-column: 1 / 10;
         grid-row: 8 / 9;
+    }
+
+    #reviewPopup{
+        width: 70%;
     }
     
     #reviewButton{
