--- a/frontend/src/components/GameReview.css
+++ b/frontend/src/components/GameReview.css
@@ -30,7 +30,8 @@
     margin-left: 10px;
     grid-row: 1 / 2;
     grid-column: 2 / 7;
-    font-size: clamp(0.8rem, 1.5vw, 1.2rem); 
+    font-size: clamp(0.8rem, 1.5vw, 1.4rem); 
+    font-weight: 700;
 }
 
 #reviewDescription{
