formatting fix for profile page

--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -43,7 +43,8 @@
 }
 
 #UserHeader{
-    display: inline-block;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 @media (max-width: 869px) and (min-width: 701px){
