--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -42,9 +42,8 @@
     margin-left: 10px;
 }
 
-#UserHeader{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+.UserHeader{
+    display: inline-block;
 }
 
 @media (max-width: 869px) and (min-width: 701px){
