--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -36,7 +36,7 @@
     padding-left: 10px;
 }
 
-#userProfilePicture{
+#userPicture{
     height: 200px;
     width: 200px;
     border-radius: 200px;
