--- a/frontend/src/components/User.css
+++ b/frontend/src/components/User.css
@@ -13,6 +13,10 @@
     border-width: 1px;
 }
 
+#userContainer:hover {
+    background-color: #52607e;
+}
+
 #userProfilePicture{
     height: 80px;
     width: 80px;
