--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -4,48 +4,55 @@
     margin: 20px;
 }
 
-#posts{
-    position: relative;
-    left: 10%;
-}
-
-#yourratings{
-    position: fixed;
-    color: white;
-    font-family: 'Inter';
-    left: 28%;
-    top: 12%;
-    font-size: clamp(0.983rem, -0.179rem + 2.976vw, 2.5rem);
-}
-
 #usernameOfUser{
     color: white;
-    font-size: 36px;
+    font-size: clamp(20px, 2vw, 36px);
     font-weight: bold;
-    margin-left: 20px;
+    grid-row: 3 / 4;
+    grid-column: 3 / 10;
+    margin: 0;
 }
 
 #nameOfUser{
     color:white;
-    font-size: 56px;
+    font-size: clamp(26px, 2vw, 56px);
     font-weight: bold;
-    margin-left: 20px;
+    grid-row: 2 / 3;
+    grid-column: 3 / 10;
+    margin: 0;
 }
 
 #UserTitle{
-    line-height: 20px;
-    padding-bottom: 50px;
-    padding-left: 10px;
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(8, 50px);
 }
 
 #userPicture{
-    height: 200px;
     width: 200px;
+    height: 200px;
+    grid-row: 2 / 6;
+    grid-column: 1 / 2;
     border-radius: 200px;
-    margin-top: 10px;
-    margin-left: 10px;
     border: solid;
     border-color: white;
+}
+
+#profileContent{
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+    display: grid;
+    grid-template-rows: 440px 800px;
+}
+
+#profileNavbar{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+#userReviews{
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 /* #userPictureEditable{
@@ -82,16 +89,63 @@
     display: inline-block;
 }
 
-@media (max-width: 869px) and (min-width: 701px){
-    #yourratings{
-        top: 14%;
-        left: 35%;
+@media (max-width: 1049px) and (min-width: 550px){
+    #userPicture{
+        width: 150px;
+        height: 150px;
+    }
+
+    #profilePage{
+        grid-template-columns: 1fr 3fr;
+    }
+
+    #usernameOfUser{
+        margin-top: 20px;
     }
 }
 
-@media (max-width: 700px) {
-     #yourratings{
-        font-size: 30px;
-        left: 35%;
+@media (max-width: 549px){
+    #userPicture{
+        width: 150px;
+        height: 150px;
+    }
+
+    #profilePage{
+        grid-template-columns: 1fr;
+    }
+
+    #profileNavbar{
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    #profileContent{
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        display: grid;
+        grid-template-rows: 300px 800px;
+    }
+
+    #UserTitle{
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        grid-template-rows: repeat(6, 50px);
+    }
+
+    #usernameOfUser{
+        grid-row: 6;
+        grid-column: 5 / 6;
+    }
+    
+    #nameOfUser{
+        grid-row: 5 / 6;
+        grid-column: 5 / 6;
+    }
+    
+    #userPicture{
+        width: 150px;
+        height: 150px;
+        grid-row: 1 / 4;
+        grid-column: 5 / 6;
     }
 }
